<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loading_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:visibility="visible">

    <!-- this view is just for taking all the inputs when we have the settings bar open -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"
        android:visibility="visible"
        android:clickable="true"
        android:focusable="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:background="@drawable/game_over_background"
        android:padding="15dp">

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_tutorial"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:id="@+id/show_tutorial"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/owner_name"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp"
            android:inputType="textCapWords"
            android:id="@+id/owner_edit_text"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/apply"
                android:id="@+id/apply_button"
                android:layout_gravity="center_horizontal"
            />

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/cancel"
                android:id="@+id/cancel_button"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
