<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.opengl.GLSurfaceView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/glView"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            />

        <TextView
            android:id="@+id/rotatedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cross_clean"
            android:textSize="100sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#66000000"
            android:rotation="-15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_weight="1.3"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textStyle="bold"
            android:textColor="#66000000"
            android:textSize="20sp"
            android:text="@string/play"
            android:id="@+id/play_bn"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textStyle="bold"
            android:textColor="#66000000"
            android:textSize="20sp"
            android:text="@string/records"
            android:id="@+id/records_bn"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textStyle="bold"
            android:textColor="#66000000"
            android:textSize="20sp"
            android:text="@string/how_to_play"
            android:id="@+id/how_to_bn"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/setting_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_settings"
        android:contentDescription="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:focusable="true"
        />

    <com.example.cross_clean.ui.GameSettings
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/setting"
        android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>
